--- a/demo/day100/day032.html
+++ b/demo/day100/day032.html
@@ -1,12 +1,247 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>日历</title>
+  <style>
+    #calendar{
+      position: relative;
+      width: 442px;
+      font-family: 'Microsoft Yahei', 'Courier New', Courier, monospace;
+    }
+    .title-bar{
+      height: 50px;
+      background-color: rgb(83, 132, 172);
+    }
+    .title-bar select{
+      position: relative;
+      top: -5px;
+      left: 30px;
+      border: none;
+      width: 80px;
+      height: 25px;
+    }
+    .title-bar span{
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+      text-align: center;
+      line-height: 50px;
+      font-size: 30px;
+      color: aliceblue;
+      cursor: pointer;
+    }
+    .title-bar span:hover{
+      background-color: rgb(20, 100, 165);
+    }
+    .title-bar span:nth-of-type(3),
+    .title-bar span:nth-of-type(4){
+      float: right;
+    }
+    table{
+      border-collapse: collapse;
+    }
+    tr,th,td{
+      border: 1px solid gainsboro;
+    }
+    th, td{
+      width: 60px;
+      height: 40px;
+      text-align: center;
+    }
+  </style>
 </head>
+
 <body>
-  
+  <div id="calendar">
+    <div class="title-bar">
+      <span id="preYear">&lt;&lt;</span>
+      <span id="preMonth">&lt;</span>
+      <select name="" id="year">
+        <option value="1970">1970</option>
+        <option value="1971">1971</option>
+        <option value="1972">1972</option>
+        <option value="1973">1973</option>
+        <option value="1974">1974</option>
+        <option value="1975">1975</option>
+        <option value="1976">1976</option>
+        <option value="1977">1977</option>
+        <option value="1978">1978</option>
+        <option value="1979">1979</option>
+        <option value="1980">1980</option>
+        <option value="1981">1981</option>
+        <option value="1982">1982</option>
+        <option value="1983">1983</option>
+        <option value="1984">1984</option>
+        <option value="1985">1985</option>
+        <option value="1986">1986</option>
+        <option value="1987">1987</option>
+        <option value="1988">1988</option>
+        <option value="1989">1989</option>
+        <option value="1990">1990</option>
+        <option value="1991">1991</option>
+        <option value="1992">1992</option>
+        <option value="1993">1993</option>
+        <option value="1994">1994</option>
+        <option value="1995">1995</option>
+        <option value="1996">1996</option>
+        <option value="1997">1997</option>
+        <option value="1998">1998</option>
+        <option value="1999">1999</option>
+        <option value="2000">2000</option>
+        <option value="2001">2001</option>
+        <option value="2002">2002</option>
+        <option value="2003">2003</option>
+        <option value="2004">2004</option>
+        <option value="2005">2005</option>
+        <option value="2006">2006</option>
+        <option value="2007">2007</option>
+        <option value="2008">2008</option>
+        <option value="2009">2009</option>
+        <option value="2010">2010</option>
+        <option value="2011">2011</option>
+        <option value="2012">2012</option>
+        <option value="2013">2013</option>
+        <option value="2014">2014</option>
+        <option value="2015">2015</option>
+        <option value="2016">2016</option>
+        <option value="2017">2017</option>
+        <option value="2018">2018</option>
+        <option value="2019">2019</option>
+        <option value="2020">2020</option>
+        <option value="2021">2021</option>
+        <option value="2022">2022</option>
+        <option value="2023">2023</option>
+        <option value="2024">2024</option>
+        <option value="2025">2025</option>
+        <option value="2026">2026</option>
+        <option value="2027">2027</option>
+        <option value="2028">2028</option>
+        <option value="2029">2029</option>
+        <option value="2030">2030</option>
+      </select>
+      <select name="" id="month">
+        <option value="1">Jan</option>
+        <option value="2">Feb</option>
+        <option value="3">Mar</option>
+        <option value="4">Apr</option>
+        <option value="5">May</option>
+        <option value="6">Jun</option>
+        <option value="7">Jul</option>
+        <option value="8">Aug</option>
+        <option value="9">Sept</option>
+        <option value="10">Oct</option>
+        <option value="11">Nov</option>
+        <option value="12">Dec</option>
+      </select>
+      <span id="nextYear">&gt;&gt;</span>
+      <span id="nextMonth">&gt;</span>
+    </div>
+    <table>
+      <tr>
+        <th>Sun</th>
+        <th>Mon</th>
+        <th>Tue</th>
+        <th>Wed</th>
+        <th>Thu</th>
+        <th>Fri</th>
+        <th>Sat</th>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+    </table>
+  </div>
+
+  <script>
+    window.onload = function(){
+      let month = document.getElementById('month');
+      let year = document.getElementById('year');
+      let td = document.getElementsByTagName('td');
+      let preMonth = document.getElementById('preMonth');
+      let nextMonth = document.getElementById('nextMonth');
+      let preYear = document.getElementById('preYear');
+      let nextYear = document.getElementById('nextYear');
+
+      // 把title-bar中的日期设置为当年当月
+      let d = new Date();
+      let currentMonth = d.getMonth() + 1;
+      let currentYear = d.getFullYear();
+      // let monthFirstDay = new Date(`${currentYear}-${currentMonth}-1`).getDay();
+      year.value = currentYear;
+      month.value = currentMonth;
+
+      // 选取获取`年月`日期
+      month.addEventListener('change', function(){
+        let monthOpt = month.options[month.selectedIndex];
+        console.log(monthOpt.value);
+      }, false);
+      year.addEventListener('change', function(){
+        let yearOpt = year.options[year.selectedIndex];
+        console.log(yearOpt.value);
+      }, false);
+
+      // console.log(monthFirstDay);
+      // console.log(td[monthFirstDay].innerHTML = '1')
+
+      // 年份切换
+      preYear.addEventListener('click', function(){
+        let pyOpt = year.options[year.selectedIndex];
+        let pyVal = pyOpt.value;
+      }, false);
+      nextYear.addEventListener('click', function(){}, false);
+
+      // 月份切换
+      preMonth.addEventListener('click', function(){
+
+      }, false);
+    };
+  </script>
 </body>
+
 </html>
